--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon-32x32.png" />
+  <link rel="icon" href="/images/Plandetravail23.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wanda book</title>
   <script src="https://cdn.cinetpay.com/seamless/main.js" type="text/javascript"></script>
